# claude-workflow

./: .gitattributes  BOOTSTRAP.md  CLAUDE.md  LICENSE  README.md  SIMPLIFICATION-PLAN.md  bootstrap.md  bootstrap.sh
.claude-plugin/: plugin.json
agents/: advisor.md  architect-reviewer.md  code-explorer.md  code-reviewer.md  documentation-writer.md  product-owner.md  project-scaffolder.md  requirements-engineer.md  reviewer.md  runner.md  security-reviewer.md  smoke-tester.md  tech-planner.md  test-runner.md  test-writer.md  text-scout.md  workflow-coach.md
hooks/: hooks.json
skills/auto-resume/: SKILL.md
skills/bootstrap/: SKILL.md
skills/brainstorm/: SKILL.md
skills/commit/: SKILL.md
skills/consult/: SKILL.md
skills/draft/: SKILL.md
skills/implement/: SKILL.md
skills/plan/: SKILL.md
skills/pr/: SKILL.md
skills/prioritize/: SKILL.md
skills/project-init/: SKILL.md
skills/project-onboard/: SKILL.md
skills/refine/: SKILL.md
skills/release/: SKILL.md
skills/resume/: SKILL.md
skills/route-best-high/: SKILL.md
skills/route-best-medium/: SKILL.md
skills/route-opus-high/: SKILL.md
skills/route-opus-medium/: SKILL.md
skills/route-sonnet-high/: SKILL.md
skills/route-sonnet-medium/: SKILL.md
skills/ship/: SKILL.md
skills/unsupervised/: SKILL.md
skills/verify/: SKILL.md
skills/workflow-decisions/: SKILL.md
skills/workflow-update/: SKILL.md
templates/: CHANGELOG.md.template  CLAUDE.md.template  CONTRIBUTING.md.template  README.md.template  spec.md.template  src-claude.md.template  tests-claude.md.template  vision.md.template
templates/configs/: .clang-format  CMakeLists.txt  eslint.config.js  generate-version.js  mkdocs.yml.template  package.json.template  pyproject.toml  railway.json  tsconfig.base.json  tsconfig.json  tsconfig.strict.json  version.h.in
templates/dev/: architecture.md.template  setup.md.template  style-guide.md.template  user-readme.md.template
templates/github/: ci-cpp.yml  ci-python.yml  ci-rust.yml  ci-typescript.yml  dependabot.yml  issue-bug.md  issue-feature.md  release-github.yml  release-npm.yml  release-pypi.yml
templates/gitignore/: cpp.gitignore  python.gitignore  rust.gitignore  (+1 more)
(+37 files in other folders)
